Mejoras en el DiskNodeConfig.java y DiskNodeServer.java